youker-assistant (0.1.4-0ubuntu1) raring; urgency=low

  * Remove libstyleplugin.so and add our components.
  * Merge youker-assistant and youker-assistant-daemon into one project.
  * Finish password authentification.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Wed, 07 Aug 2013 17:09:24 +0800

youker-assistant (0.1.3-0ubuntu1) raring; urgency=low

  * Finish the basic beauty of Clear pages and Set pages.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Thu, 01 Aug 2013 18:33:08 +0800

youker-assistant (0.1.2-0ubuntu1) raring; urgency=low

  * Modify some systemset pages.
  * systemdbus and sessiondbus start when the program run.
  * Modify Rubbish Clear functions.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Fri, 26 Jul 2013 18:23:15 +0800

youker-assistant (0.1.1-0ubuntu1) raring; urgency=low

  * Initial release.

 -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Tue, 02 Jul 2013 08:57:14 +0800