@@ -33,7 +33,7 @@ Rectangle {
 //    property SessionDispatcher dis: sessiondispatcher
     property SystemDispatcher dis: systemdispatcher
     property string image_path: ""
-    property string actiontitle: "开机动画设置"
+    property string actiontitle: "开机动画设置(目前仅支持png图片格式，不支持以中文命名的图片)"
     property string actiontext: "点击“自定义图片”按钮选择您需要添加到列表中的图片，在列表中选中您要设置的图片名称，点击“确定”按钮完成设置。"
     property int num: 0
     property string selectedimage: ""
@@ -97,12 +97,24 @@ Rectangle {
         anchors.topMargin: 44
         anchors.left: parent.left
         anchors.leftMargin: 80
-        Text {
-             text: bootimagepage.actiontitle
-             font.bold: true
-             font.pixelSize: 14
-             color: "#383838"
-         }
+        Row {
+            spacing: 50
+            Text {
+                 text: bootimagepage.actiontitle
+                 font.bold: true
+                 font.pixelSize: 14
+                 color: "#383838"
+             }
+            //status picture
+            Image {
+                id: statusImage
+                visible: false
+                source: "../../img/toolWidget/finish.png"
+                fillMode: "PreserveAspectFit"
+                smooth: true
+                anchors.verticalCenter: parent.verticalCenter
+            }
+        }
          Text {
              text: bootimagepage.actiontext
              font.pixelSize: 12
@@ -325,7 +337,12 @@ Rectangle {
             console.log("boot ok");
             console.log(bootimagepage.selectedimage);
             systemdispatcher.custom_plymouth_bg_qt(bootimagepage.selectedimage);
+            statusImage.visible = true;
         }
+        Timer {
+                 interval: 5000; running: true; repeat: true
+                 onTriggered: statusImage.visible = false
+             }
     }
 }
 
