@@ -2,9 +2,11 @@ youker-assistant (0.1.4-0ubuntu1) raring; urgency=low
 
   * Remove libstyleplugin.so and add our components.
   * Merge youker-assistant and youker-assistant-daemon into one project.
-  * Finish password authentification.
+  * Finish the method of get password.
+  * Modify the start method of systemdbus.
+  * Add Timer to prompt information.
 
- -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Wed, 07 Aug 2013 17:09:24 +0800
+ -- Kobe Lee (kylinkobe) <kobe24_lixiang@126.com>  Fri, 09 Aug 2013 16:41:16 +0800
 
 youker-assistant (0.1.3-0ubuntu1) raring; urgency=low
 
